--- a/charts/civil-ccd/Chart.yaml
+++ b/charts/civil-ccd/Chart.yaml
@@ -56,3 +56,9 @@ dependencies:
     version: 0.1.7
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
     condition: civil-translation.enabled
+
+  # To remove unused definitions
+  - name: ccd-def-cleanup
+    version: ~9.0.4
+    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
+    condition: ccd-def-cleanup.enabled
