--- a/charts/civil-ccd/values.enableHmc.preview.template.yaml
+++ b/charts/civil-ccd/values.enableHmc.preview.template.yaml
@@ -29,14 +29,18 @@ xui-webapp:
       SERVICES_EM_ANNO_API: https://gateway-ccd.aat.platform.hmcts.net
       SERVICES_CCD_DATA_STORE_API: http://ccd-data-store-api-aat.service.core-compute-aat.internal
 
-servicebus:
+#servicebus:
+#  enabled: true
+#  resourceGroup: hmc-shared-aat
+#  sbNamespace: hmc-servicebus-aat
+#  #Each topic/queue matches up to one used in the config above
+#  setup:
+#    topics:
+#      - name: hmc-to-cft-aat
+#        subscriptionNeeded: yes
+
+ccd-def-cleanup:
   enabled: true
-  resourceGroup: hmc-shared-aat
-  sbNamespace: hmc-servicebus-aat
-  #Each topic/queue matches up to one used in the config above
-  setup:
-    topics:
-      - name: hmc-to-cft-aat
-        subscriptionNeeded: yes
-    queues:
-      - name: tribunals-to-hearing-api
+  change_id: ${CHANGE_ID}
+  case_type_ids:
+    - CIVIL
