--- a/package.json
+++ b/package.json
@@ -111,8 +111,8 @@
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/eslint-plugin-tslint": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
-    "allure-commandline": "^2.30.0",
-    "allure-playwright": "^3.0.5",
+    "allure-commandline": "^2.29.0",
+    "allure-playwright": "2.4.0",
     "chai": "^4.3.4",
     "codeceptjs": "^3.5.11",
     "concurrently": "^9.0.1",
