--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "test:crossbrowser": "./e2e/run-crossbrowser-tests.sh",
     "test:AATFunctional": "./e2e/run-prod-functional-tests.sh",
     "test:DemoFunctional": "./e2e/run-features-flag-enabled-full-functional-tests",
+    "test:playwright-setup:install": "yarn playwright install",
     "test:playwright-setup:users:ci": "npx playwright test --project users-setup --pass-with-no-tests --no-deps",
     "test:playwright-setup:users-auth:ci": "npx playwright test --project users-auth-setup --pass-with-no-tests --no-deps",
     "test:playwright-setup:ci": "yarn test:playwright-setup:users:ci && yarn test:playwright-setup:users-auth:ci",
@@ -72,7 +73,7 @@
     "test:playwright-teardown:ci": "./bin/run-commands-series.sh -c \"test:playwright-teardown:users-auth:ci\" \"ts-node ./playwright-e2e/global/teardown-ci\"",
     "test:playwright-debug:local": "npx playwright test --project full-functional --grep @debug",
     "test:playwright-functional:local": "npx playwright test --project full-functional",
-    "test:codecept-nightly:ci": "yarn playwright install && MOCHAWESOME_REPORTFILENAME=functional-unspec npx codeceptjs run-workers --suites 2 --grep '@e2e-nightly-prod' --reporter mocha-multi --verbose",
+    "test:codecept-nightly:ci": "MOCHAWESOME_REPORTFILENAME=functional-unspec npx codeceptjs run-workers --suites 2 --grep '@e2e-nightly-prod' --reporter mocha-multi --verbose",
     "test:fullfunctional": "concurrently \"yarn test:codecept-nightly:ci\" \"yarn test:playwright-nightly:ci\"",
     "test:e2e-nightly-prod": "MOCHAWESOME_REPORTFILENAME=non-prod-e2e-ft npx codeceptjs run-workers --suites 2 --grep '@e2e-nightly-prod' --reporter mocha-multi --verbose",
     "test:api-nightly-prod": "MOCHAWESOME_REPORTFILENAME=api-nightly-prod npx codeceptjs run-workers --suites 8 --grep '@api-nightly-prod' --reporter mocha-multi --verbose",
