--- a/package.json
+++ b/package.json
@@ -64,7 +64,17 @@
     "test:crossbrowser": "./e2e/run-crossbrowser-tests.sh",
     "test:AATFunctional": "./e2e/run-prod-functional-tests.sh",
     "test:DemoFunctional": "./e2e/run-features-flag-enabled-full-functional-tests",
-    "test:fullfunctional": "yarn playwright install && MOCHAWESOME_REPORTFILENAME=functional-unspec npx codeceptjs run-workers --suites 2 --grep '@e2e-nightly-prod' --reporter mocha-multi --verbose",
+    "test:playwright-setup:install": "yarn playwright install",
+    "test:playwright-setup:users:ci": "npx playwright test --project users-setup --pass-with-no-tests --no-deps",
+    "test:playwright-setup:users-auth:ci": "npx playwright test --project users-auth-setup --pass-with-no-tests --no-deps",
+    "test:playwright-setup:ci": "yarn test:playwright-setup:users:ci && yarn test:playwright-setup:users-auth:ci",
+    "test:playwright-nightly:ci": "FUNCTIONAL=true npx playwright test --project full-functional --no-deps",
+    "test:playwright-teardown:users-auth:ci": "npx playwright test --project users-auth-teardown --pass-with-no-tests --no-deps",
+    "test:playwright-teardown:ci": "./bin/run-commands-series.sh -c \"test:playwright-teardown:users-auth:ci\" \"ts-node ./playwright-e2e/global/teardown-ci\"",
+    "test:playwright-debug:local": "npx playwright test --project full-functional --grep @debug",
+    "test:playwright-functional:local": "npx playwright test --project full-functional",
+    "test:codecept-nightly:ci": "MOCHAWESOME_REPORTFILENAME=functional-unspec npx codeceptjs run-workers --suites 2 --grep '@e2e-nightly-prod' --reporter mocha-multi --verbose",
+    "test:fullfunctional": "concurrently \"yarn test:codecept-nightly:ci\" \"yarn test:playwright-nightly:ci\"",
     "test:e2e-nightly-prod": "MOCHAWESOME_REPORTFILENAME=non-prod-e2e-ft npx codeceptjs run-workers --suites 2 --grep '@e2e-nightly-prod' --reporter mocha-multi --verbose",
     "test:api-nightly-prod": "MOCHAWESOME_REPORTFILENAME=api-nightly-prod npx codeceptjs run-workers --suites 8 --grep '@api-nightly-prod' --reporter mocha-multi --verbose",
     "test:e2e-nightly-nonprod": "MOCHAWESOME_REPORTFILENAME=non-prod-e2e-ft npx codeceptjs run-workers --suites 2 --grep '@e2e-nightly-nonprod' --reporter mocha-multi --verbose",
@@ -89,6 +99,10 @@
     "test:api-multi-intermediate-unspec": "MOCHAWESOME_REPORTFILENAME=api-multi-intermediate-unspec npx codeceptjs  run-workers --suites 4 --grep @api-unspec-multi-intermediate --reporter mocha-multi --verbose",
     "test:e2e-hearing-request": "MOCHAWESOME_REPORTFILENAME=e2e-hearing-request npx codeceptjs run-workers --suites 4 --grep @e2e-hearing-request --reporter mocha-multi --verbose",
     "test:AHN": "MOCHAWESOME_REPORTFILENAME=automated-hearing-notice-scheduler npx codeceptjs run --grep '@AHN' --reporter mocha-multi --verbose",
+    "test:playwright-functional:generate-report": "allure generate allure-functional-results --clean -o allure-functional-report",
+    "test:playwright-bootstrap:generate-report": "allure generate allure-bootstrap-results --clean -o allure-bootstrap-report",
+    "test:playwright-functional:open-report": "allure open allure-functional-report",
+    "test:playwright-bootstrap:open-report": "allure open allure-bootstrap-report",
     "prepare": "husky"
   },
   "license": "MIT",
@@ -100,8 +114,11 @@
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/eslint-plugin-tslint": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
+    "allure-commandline": "^2.29.0",
+    "allure-playwright": "2.4.0",
     "chai": "^4.3.4",
     "codeceptjs": "^3.5.11",
+    "concurrently": "^9.0.1",
     "custom-eslint-plugin": "file:plugins/custom-eslint-plugins",
     "deep-equal-in-any-order": "^1.0.28",
     "dotenv": "^16.4.5",
@@ -124,6 +141,7 @@
     "playwright-core": "^1.47.2",
     "prettier": "^3.3.3",
     "totp-generator": "^1.0.0",
+    "ts-node": "^10.9.2",
     "typescript": "5.1.3",
     "typescript-eslint": "8.0.0",
     "uuid": "^3.4.0",
