--- a/ccd-definition/CaseEventToFields/InitiateApplicationGAspec.json
+++ b/ccd-definition/CaseEventToFields/InitiateApplicationGAspec.json
@@ -1,6 +1,6 @@
 [
   {
-    "CaseTypeID": "CIVIL",
+    "CaseTypeID": "CIVIL${CCD_DEF_VERSION}",
     "CaseEventID": "INITIATE_GENERAL_APPLICATION",
     "CaseFieldID": "generalAppHearingDate",
     "DisplayContext": "COMPLEX",
@@ -12,7 +12,7 @@
     "ShowSummaryChangeOption": "Y"
   },
   {
-    "CaseTypeID": "CIVIL",
+    "CaseTypeID": "CIVIL${CCD_DEF_VERSION}",
     "CaseEventID": "INITIATE_GENERAL_APPLICATION",
     "CaseFieldID": "gaUploadN245FormUploadLabel",
     "DisplayContext": "COMPLEX",
@@ -69,7 +69,7 @@
     "ShowSummaryChangeOption": "Y"
   },
   {
-    "CaseTypeID": "CIVIL",
+    "CaseTypeID": "CIVIL${CCD_DEF_VERSION}",
     "CaseEventID": "INITIATE_GENERAL_APPLICATION",
     "CaseFieldID": "generalAppDetailsOfOrder",
     "DisplayContext": "MANDATORY",
