--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "test:playwright-e2e-debug:local": "npx playwright test --project e2e-full-functional --grep @debug",
     "test:playwright-e2e:local": "npx playwright test --project e2e-full-functional",
     "test:codecept-e2e-nightly:ci": "MOCHAWESOME_REPORTFILENAME=functional-unspec npx codeceptjs run-workers --suites 2 --grep '@e2e-nightly-prod' --reporter mocha-multi --verbose",
-    "test:fullfunctional": "concurrently \"yarn test:codecept-nightly:ci\" \"yarn test:playwright-nightly:ci\"",
+    "test:fullfunctional": "concurrently \"yarn test:codecept-e2e-nightly:ci\" \"yarn test:playwright-e2e-nightly:ci\"",
     "test:e2e-nightly-prod": "MOCHAWESOME_REPORTFILENAME=non-prod-e2e-ft npx codeceptjs run-workers --suites 2 --grep '@e2e-nightly-prod' --reporter mocha-multi --verbose",
     "test:api-nightly-prod": "MOCHAWESOME_REPORTFILENAME=api-nightly-prod npx codeceptjs run-workers --suites 8 --grep '@api-nightly-prod' --reporter mocha-multi --verbose",
     "test:e2e-nightly-nonprod": "MOCHAWESOME_REPORTFILENAME=non-prod-e2e-ft npx codeceptjs run-workers --suites 2 --grep '@e2e-nightly-nonprod' --reporter mocha-multi --verbose",
