--- a/charts/civil-ccd/values.enableHmc.preview.template.yaml
+++ b/charts/civil-ccd/values.enableHmc.preview.template.yaml
@@ -22,11 +22,17 @@ xui-webapp:
   enabled: true
   nodejs:
     environment:
+      SERVICES_HEARINGS_COMPONENT_API: http://jurisdiction-hearings-api-aat.service.core-compute-aat.internal
+      SERVICES_HEARINGS_COMPONENT_API_SSCS: http://${SERVICE_NAME}-sscs-hearings-api
       HEALTH_CCD_COMPONENT_API: https://gateway-ccd.aat.platform.hmcts.net/health
       HEALTH_CCD_DATA_API: http://ccd-data-store-api-aat.service.core-compute-aat.internal/health
       SERVICES_CCD_COMPONENT_API: https://gateway-ccd.aat.platform.hmcts.net
       SERVICES_EM_ANNO_API: https://gateway-ccd.aat.platform.hmcts.net
       SERVICES_CCD_DATA_STORE_API: http://ccd-data-store-api-aat.service.core-compute-aat.internal
+      SERVICES_HMC_HEARINGS_COMPONENT_API: http://hmc-cft-hearing-service-aat.service.core-compute-aat.internal
+      SERVICES_HEARINGS_COMPONENT_API_CIVIL: https://civil-ccd-pr-${CHANGE_ID}.preview.platform.hmcts.net
+      SERVICES_HEARINGS_CASETYPES_CIVIL: CIVIL-${CHANGE_ID}
+      HEARINGS_JURISDICTIONS: CIVIL
 
 #servicebus:
 #  enabled: true
