--- a/charts/civil-ccd/values.enableNotifyEmails.preview.template.yaml
+++ b/charts/civil-ccd/values.enableNotifyEmails.preview.template.yaml
@@ -55,11 +55,11 @@ civil-service:
       SERVICE_REQUEST_UPDATE: https://${SERVICE_NAME}.preview.platform.hmcts.net/service-request-update
       SERVICE_REQUEST_UPDATE_CLAIM_ISSUED: https://${SERVICE_NAME}.preview.platform.hmcts.net/service-request-update-claim-issued
       HMC_HEARINGS_SUBSCRIPTION_ENABLED: false
-      CMC_DB_PASSWORD: "{{ .Values.postgresql.auth.postgresPassword}}"
-#      CMC_DB_HOST: civil-preview.postgres.database.azure.com
-#      CMC_DB_CONNECTION_OPTIONS: "?stringtype=unspecified&reWriteBatchedInserts=true&sslmode=require"
-#      CMC_DB_USERNAME: hmcts
-#      CMC_DB_NAME: "pr-${CHANGE_ID}-cmc"
+#      CMC_DB_PASSWORD: "{{ .Values.postgresql.auth.postgresPassword}}"
+      CMC_DB_HOST: civil-preview.postgres.database.azure.com
+      CMC_DB_CONNECTION_OPTIONS: "?stringtype=unspecified&reWriteBatchedInserts=true&sslmode=require"
+      CMC_DB_USERNAME: hmcts
+      CMC_DB_NAME: "pr-${CHANGE_ID}-cmc"
     secrets:
       CMC_DB_PASSWORD:
         secretRef: postgres
