--- a/charts/civil-ccd/values.preview.template.yaml
+++ b/charts/civil-ccd/values.preview.template.yaml
@@ -158,7 +158,7 @@ camunda-bpm:
       CAMUNDA_DB_PASSWORD:
         secretRef: postgres
         key: PASSWORD
-        disabled: true
+        disabled: false
 
 postgresql:
   enabled: true
