--- a/charts/civil-ccd/values.enableNotifyEmails.preview.template.yaml
+++ b/charts/civil-ccd/values.enableNotifyEmails.preview.template.yaml
@@ -1,6 +1,6 @@
 civil-service:
   java:
-    image: 'hmctspublic.azurecr.io/civil/service:pr-5565'
+    image: 'hmctspublic.azurecr.io/civil/service:latest'
     keyVaults:
       civil:
         resourceGroup: civil
